--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-type-animation": "^3.2.0",
     "three": "^0.173.0"
   },
   "devDependencies": {
