--- a/package.json
+++ b/package.json
@@ -1,35 +1,57 @@
 {
-  "name": "kshitiz-portfolio",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@heroicons/react": "^2.2.0",
-    "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/typography": "^0.5.16",
-    "critters": "^0.0.25",
-    "framer-motion": "^12.4.4",
-    "next": "15.1.4",
-    "next-themes": "^0.4.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-type-animation": "^3.2.0",
-    "three": "^0.173.0"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+    "name": "kshitiz-portfolio",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "postinstall": "prisma generate"
+    },
+    "dependencies": {
+        "@auth/prisma-adapter": "^1.0.0",
+        "@formspree/react": "^2.5.1",
+        "@headlessui/react": "^2.2.0",
+        "@heroicons/react": "^2.2.0",
+        "@prisma/client": "^5.22.0",
+        "@radix-ui/react-toast": "^1.2.6",
+        "@supabase/supabase-js": "^2.48.1",
+        "bcryptjs": "^2.4.3",
+        "critters": "^0.0.25",
+        "framer-motion": "^10.12.16",
+        "jsonwebtoken": "^9.0.2",
+        "lucide-react": "^0.475.0",
+        "mongoose": "^8.10.1",
+        "next": "^14.0.0",
+        "next-auth": "^4.24.11",
+        "next-seo": "^6.6.0",
+        "next-sitemap": "^4.2.3",
+        "next-themes": "^0.2.1",
+        "nodemailer": "^6.10.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-helmet-async": "^2.0.5",
+        "react-toastify": "^11.0.3",
+        "react-type-animation": "^3.2.0",
+        "resend": "^4.1.2",
+        "sharp": "^0.33.5",
+        "zod": "^3.24.2"
+    },
+    "devDependencies": {
+        "@tailwindcss/forms": "^0.5.10",
+        "@tailwindcss/typography": "^0.5.16",
+        "@types/bcryptjs": "^2.4.2",
+        "@types/node": "^20.3.1",
+        "@types/nodemailer": "^6.4.8",
+        "@types/react": "^18.2.12",
+        "@types/react-dom": "^18.2.5",
+        "autoprefixer": "^10.4.20",
+        "eslint": "^8.42.0",
+        "eslint-config-next": "^13.4.5",
+        "postcss": "^8.5.2",
+        "prisma": "^5.0.0",
+        "tailwindcss": "^3.4.17",
+        "typescript": "^5.1.3"
+    }
 }
