--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
         "@heroicons/react": "^2.2.0",
         "@prisma/client": "^5.22.0",
         "@radix-ui/react-toast": "^1.2.6",
+        "@stripe/stripe-js": "^1.54.2",
         "@supabase/supabase-js": "^2.48.1",
+        "@testing-library/react": "^16.2.0",
         "bcryptjs": "^2.4.3",
         "critters": "^0.0.25",
+        "cypress": "^14.0.3",
         "framer-motion": "^10.12.16",
+        "jest": "^29.7.0",
         "jsonwebtoken": "^9.0.2",
         "lucide-react": "^0.475.0",
         "mongoose": "^8.10.1",
@@ -29,9 +33,12 @@
         "next-sitemap": "^4.2.3",
         "next-themes": "^0.2.1",
         "nodemailer": "^6.10.0",
+        "prettier": "^3.5.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-helmet-async": "^2.0.5",
+        "react-markdown": "^9.0.3",
+        "react-query": "^3.39.3",
         "react-toastify": "^11.0.3",
         "react-type-animation": "^3.2.0",
         "resend": "^4.1.2",
@@ -47,7 +54,7 @@
         "@types/react": "^18.2.12",
         "@types/react-dom": "^18.2.5",
         "autoprefixer": "^10.4.20",
-        "eslint": "^8.42.0",
+        "eslint": "^8.57.1",
         "eslint-config-next": "^13.4.5",
         "postcss": "^8.5.2",
         "prisma": "^5.0.0",
