--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
         "@supabase/supabase-js": "^2.48.1",
         "@testing-library/react": "^16.2.0",
         "bcryptjs": "^2.4.3",
+        "chart.js": "^4.4.7",
         "critters": "^0.0.25",
         "cypress": "^14.0.3",
+        "date-fns": "^4.1.0",
         "framer-motion": "^10.12.16",
         "jest": "^29.7.0",
         "jsonwebtoken": "^9.0.2",
@@ -35,6 +37,7 @@
         "nodemailer": "^6.10.0",
         "prettier": "^3.5.1",
         "react": "^18.2.0",
+        "react-chartjs-2": "^5.3.0",
         "react-dom": "^18.2.0",
         "react-helmet-async": "^2.0.5",
         "react-markdown": "^9.0.3",
