--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
-        "postinstall": "prisma generate"
+        "postinstall": "prisma generate",
+        "db:push": "prisma db push",
+        "db:generate": "prisma generate",
+        "db:init": "ts-node src/lib/init-db.ts",
+        "db:setup": "ts-node --project tsconfig.json -r tsconfig-paths/register scripts/setup-db.ts",
+        "db:studio": "prisma studio",
+        "test:db": "ts-node -P tsconfig.json src/lib/test-connection.ts"
     },
     "dependencies": {
         "@auth/prisma-adapter": "^1.0.0",
         "@formspree/react": "^2.5.1",
         "@headlessui/react": "^2.2.0",
         "@heroicons/react": "^2.2.0",
-        "@prisma/client": "^5.22.0",
+        "@prisma/client": "^5.10.2",
         "@radix-ui/react-toast": "^1.2.6",
         "@stripe/stripe-js": "^1.54.2",
         "@supabase/supabase-js": "^2.48.1",
@@ -24,13 +30,13 @@
         "critters": "^0.0.25",
         "cypress": "^14.0.3",
         "date-fns": "^4.1.0",
-        "framer-motion": "^10.12.16",
+        "framer-motion": "^11.18.2",
         "jest": "^29.7.0",
         "jsonwebtoken": "^9.0.2",
         "lucide-react": "^0.475.0",
         "mongoose": "^8.10.1",
-        "next": "^14.0.0",
-        "next-auth": "^4.24.11",
+        "next": "14.1.0",
+        "next-auth": "^4.24.6",
         "next-seo": "^6.6.0",
         "next-sitemap": "^4.2.3",
         "next-themes": "^0.2.1",
@@ -40,28 +46,31 @@
         "react-chartjs-2": "^5.3.0",
         "react-dom": "^18.2.0",
         "react-helmet-async": "^2.0.5",
+        "react-icons": "^5.5.0",
         "react-markdown": "^9.0.3",
         "react-query": "^3.39.3",
         "react-toastify": "^11.0.3",
         "react-type-animation": "^3.2.0",
         "resend": "^4.1.2",
         "sharp": "^0.33.5",
-        "zod": "^3.24.2"
+        "zod": "^3.22.4"
     },
     "devDependencies": {
-        "@tailwindcss/forms": "^0.5.10",
+        "@tailwindcss/forms": "^0.5.7",
         "@tailwindcss/typography": "^0.5.16",
         "@types/bcryptjs": "^2.4.2",
-        "@types/node": "^20.3.1",
+        "@types/node": "^20.17.19",
         "@types/nodemailer": "^6.4.8",
-        "@types/react": "^18.2.12",
-        "@types/react-dom": "^18.2.5",
-        "autoprefixer": "^10.4.20",
+        "@types/react": "^18.2.61",
+        "@types/react-dom": "^18.2.19",
+        "autoprefixer": "^10.4.17",
         "eslint": "^8.57.1",
         "eslint-config-next": "^13.4.5",
-        "postcss": "^8.5.2",
-        "prisma": "^5.0.0",
-        "tailwindcss": "^3.4.17",
-        "typescript": "^5.1.3"
+        "postcss": "^8.4.35",
+        "prisma": "^5.10.2",
+        "tailwindcss": "^3.4.1",
+        "ts-node": "^10.9.2",
+        "tsconfig-paths": "^4.2.0",
+        "typescript": "^5.7.3"
     }
 }
