--- a/package.json
+++ b/package.json
@@ -6,14 +6,7 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint",
-        "postinstall": "prisma generate",
-        "db:push": "prisma db push",
-        "db:generate": "prisma generate",
-        "db:init": "ts-node src/lib/init-db.ts",
-        "db:setup": "ts-node --project tsconfig.json -r tsconfig-paths/register scripts/setup-db.ts",
-        "db:studio": "prisma studio",
-        "test:db": "ts-node -P tsconfig.json src/lib/test-connection.ts"
+        "lint": "next lint"
     },
     "dependencies": {
         "@auth/prisma-adapter": "^1.0.0",
@@ -43,7 +36,6 @@
         "nodemailer": "^6.10.0",
         "prettier": "^3.5.1",
         "react": "^18.2.0",
-        "react-chartjs-2": "^5.3.0",
         "react-dom": "^18.2.0",
         "react-helmet-async": "^2.0.5",
         "react-icons": "^5.5.0",
