--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@formspree/react": "^2.5.1",
-        "@headlessui/react": "^1.7.18",
-        "@heroicons/react": "^2.1.1",
+        "@formspree/react": "^3.0.0",
+        "@headlessui/react": "^2.2.0",
+        "@heroicons/react": "^2.2.0",
         "@radix-ui/react-toast": "^1.2.6",
         "chart.js": "^4.4.8",
         "date-fns": "^4.1.0",
-        "framer-motion": "^11.18.2",
-        "next": "14.1.0",
-        "next-themes": "^0.2.1",
-        "react": "^18.2.0",
+        "framer-motion": "^12.5.0",
+        "next": "^15.2.3",
+        "next-auth": "^4.24.11",
+        "next-themes": "^0.4.6",
+        "react": "^19.0.0",
         "react-chartjs-2": "^5.3.0",
-        "react-dom": "^18.2.0",
+        "react-dom": "^19.0.0",
         "react-icons": "^5.5.0",
         "react-type-animation": "^3.2.0",
         "sharp": "^0.33.5"
