--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.10",
+        "@tailwindcss/postcss": "^4.0.15",
         "@tailwindcss/typography": "^0.5.16",
         "@types/react": "^19.0.12",
         "@types/react-dom": "^19.0.4",
