--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.7",
         "@tailwindcss/typography": "^0.5.10",
+        "@types/node": "^20.11.24",
         "@types/react": "^19.0.12",
         "@types/react-dom": "^19.0.4",
         "autoprefixer": "^10.4.17",
