--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@types/react": "^19.0.12",
         "@types/react-dom": "^19.0.4",
         "autoprefixer": "^10.4.17",
+        "critters": "^0.0.25",
         "eslint": "^9.23.0",
         "eslint-config-next": "^15.2.3",
         "postcss": "^8.4.35",
